# Zugzwang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  precompute.py
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  evaluation.cpp  evaluation.h  main.cpp  movegen.cpp  movegen.h  pch.h  position.cpp  position.h  search.cpp  search.h  types.h  uci.cpp  uci.h
